--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ future==0.18.2
 pefile==2021.5.24
 pyinstaller==4.3
 pyinstaller-hooks-contrib==2021.1
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
 pywin32-ctypes==0.2.0
